--- a/命令本.md
+++ b/命令本.md
@@ -75,7 +75,9 @@ service iptables stop
    update-rc.d ssh enbale
    ```
 
-### 3. vim配置文件
+### 3. 查看编辑文件
+
+#### 3.1 vim配置文件
 
 ```shell
 # ~/.vimrc
@@ -91,21 +93,34 @@ set autoindent
 set cindent
 ```
 
+### 4. 网络相关
 
+#### 4.1 arp
 
-## a
+```sh
+arp -a # 显示当前IP地址与Mac地址的映射
+```
 
-**Linux**
-
-- `arp -a`：显示当前IP地址与Mac地址的映射
-
-
-
-## t
-
-**Linux**
+#### 4.2 traceroute
 
 - `traceroute 目标主机地址` TTL从1开始递增，每递增一次发一次UDP包，强制接收ICMP的超时消息，可以将**路由器的地址逐一呈现**。
+
+### 5. Tomcat命令
+
+#### 5.1 启动tomcat
+
+```sh
+# 进入tomcat的bin目录
+startup.sh
+```
+
+#### 5.2 停止tomcat
+
+```sh
+shutdown.sh
+```
+
+
 
 ## conda
 
@@ -160,3 +175,61 @@ conda config --set remote_read_timeout_secs 1000.0
 
 
 
+## 常见问题命令
+
+### 1. 能ping通服务器，但是访问不了服务器上的Tomcat
+
+#### 1.1 原因
+
+服务器端口没有打开，端口交给了firewall管理，需要开启Firewall白名单。
+
+#### 1.2 解决办法
+
+**步骤1：确定tomcat端口**
+
+没有手动修改过Tomcat的端口号，默认端口号就是8080
+
+**步骤2：为防火墙设置端口白名单：部分指令需要root权限**
+
+```sh
+# 启用防火墙
+systemctl start firewalld.service
+
+# 设置防火墙为可用状态
+systemctl enable firewalld.service
+
+# 查看防火墙已经开放的端口
+firewall-cmd --list-ports
+
+# 添加端口白名单
+firewall-cmd --zone=public --add-port=8080/tcp --permanent
+
+# 重启网络防火墙
+systemctl restart firewalld.service
+
+# 再次查看端口开放情况
+firewall-cmd --list-ports
+```
+
+[**步骤3：重启apche Tomcat 服务（此步骤似乎非必需）**]()
+
+```sh
+# 1. 进入Tomcat的bin目录
+cd .....
+
+# 2. 启动tomcat
+sh startup.sh
+
+# 3.1 关闭tomcat
+sh shutdown.sh
+# 3.2 通过杀死进程来关闭tomcat
+ps -ef | grep tomcat
+kill -9 xxxx
+# 4. 重启=关闭+启动
+```
+
+**步骤4：访问**
+
+通过ip:端口号访问
+
+192.168.58.130:8080
